--- a/src/main/resources/fxml/GameLobby.fxml
+++ b/src/main/resources/fxml/GameLobby.fxml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.VBox?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.image.Image?>
-<BorderPane fx:id="lobbyPane" prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="it.polimi.ingsw.client.view.gui.controllers.LobbyController" stylesheets="@../css/preGame.css">
+<BorderPane fx:id="lobbyPane" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="it.polimi.ingsw.client.view.gui.controllers.LobbyController"
+            stylesheets="@../css/preGame.css">
     <center>
         <VBox alignment="CENTER" spacing="20.0">
             <ImageView fitWidth="250" preserveRatio="true" pickOnBounds="true">
