Handled some Player disconnection cases

--- a/src/main/resources/fxml/CreateGame.fxml
+++ b/src/main/resources/fxml/CreateGame.fxml
@@ -28,6 +28,7 @@
                          onAction="#setNumberOfPlayers" text="4" toggleGroup="$playersNumber"/>
 
             <Button mnemonicParsing="false" onAction="#createGame" text="Create Game"/>
+            <Button mnemonicParsing="false" onAction="#joinGame" text="Search for a Game"/>
         </VBox>
     </center>
 </BorderPane>
