--- a/src/main/resources/css/endGame.css
+++ b/src/main/resources/css/endGame.css
@@ -4,3 +4,10 @@
     -fx-background-repeat: stretch;
     -fx-background-position: center center;
 }
+.label{
+    -fx-font-size: 24;
+}
+
+.button{
+    -fx-font-size: 20;
+}
