--- a/src/main/resources/fxml/EndGame.fxml
+++ b/src/main/resources/fxml/EndGame.fxml
@@ -2,57 +2,30 @@
 
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
 <BorderPane fx:id="pane" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1"
             fx:controller="it.polimi.ingsw.client.view.gui.controllers.EndGameController"
             stylesheets="@../css/endGame.css">
     <center>
         <VBox alignment="CENTER" spacing="30">
-            <Label text="Game Ended">
-                <font>
-                    <Font name="Old London" size="72.0"/>
-                </font>
-            </Label>
+            <Label text="Game Ended" style="-fx-font-size: 72px"/>
             <HBox alignment="CENTER">
-                <Label fx:id="winner" text="Winner:">
-                    <font>
-                        <Font name="Old London" size="36.0"/>
-                    </font>
+                <Label fx:id="winner" text="Winner:" style="-fx-font-size: 40px">
                 </Label>
             </HBox>
             <HBox alignment="CENTER">
-                <Label fx:id="player1" text="Player 1:">
-                    <font>
-                        <Font name="Old London" size="24.0"/>
-                    </font>
-                </Label>
+                <Label fx:id="player1" text="Player 1:"/>
             </HBox>
             <HBox alignment="CENTER">
-                <Label fx:id="player2" text="Player 2:">
-                    <font>
-                        <Font name="Old London" size="24.0"/>
-                    </font>
-                </Label>
+                <Label fx:id="player2" text="Player 2:"/>
             </HBox>
             <HBox alignment="CENTER">
-                <Label fx:id="player3" text="Player 3:" visible="false">
-                    <font>
-                        <Font name="Old London" size="24.0"/>
-                    </font>
-                </Label>
+                <Label fx:id="player3" text="Player 3:" visible="false"/>
             </HBox>
             <HBox alignment="CENTER">
-                <Label fx:id="player4" text="Player 4:" visible="false">
-                    <font>
-                        <Font name="Old London" size="24.0"/>
-                    </font>
-                </Label>
+                <Label fx:id="player4" text="Player 4:" visible="false"/>
             </HBox>
-            <Button fx:id="menuButton" alignment="CENTER" mnemonicParsing="false" style="-fx-background-color: #dca156;"
-                    text="Menu" onAction="#menuButtonPressed" textAlignment="CENTER">
-                <font>
-                    <Font name="Old London" size="20.0"/>
-                </font>
+            <Button alignment="CENTER" mnemonicParsing="false" style="-fx-background-color: #dca156;"
+                    text="Quit" onAction="#quitButtonPressed" textAlignment="CENTER">
             </Button>
         </VBox>
     </center>
